--- a/boot/pom.xml
+++ b/boot/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.amusement</groupId>
-        <artifactId>api</artifactId>
+        <artifactId>amusement-park-back</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath> </parent>
 
@@ -34,6 +34,14 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.amusement</groupId>
+            <artifactId>api-rest</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.amusement</groupId>
+            <artifactId>postgres-repository</artifactId>
         </dependency>
 
     </dependencies>
