--- a/boot/src/main/resources/application.properties
+++ b/boot/src/main/resources/application.properties
@@ -23,3 +23,6 @@ spring.jpa.hibernate.ddl-auto=validate
 # (Opcional pero recomendado) Muestra por consola las queries SQL que JPA ejecuta
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
