feat: adding security

--- a/boot/src/main/resources/application.properties
+++ b/boot/src/main/resources/application.properties
@@ -26,3 +26,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
+
+jwt.secret=twHPcs7DHIZ0YRsK9uN17FBQ93naw1De
+jwt.expiration-ms=86400000
