--- a/driven/postgres-repository/pom.xml
+++ b/driven/postgres-repository/pom.xml
@@ -61,5 +61,11 @@
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
