feat: implementing security and token

--- a/boot/src/main/resources/application.properties
+++ b/boot/src/main/resources/application.properties
@@ -1,26 +1,21 @@
 # =======================================
 # CONFIGURACION DE BASE DE DATOS (POSTGRESQL)
 # =======================================
-# La URL de conexion. Fijate que usamos el puerto 5433 y la BBDD amusement_park_db
-spring.datasource.url=jdbc:postgresql://localhost:5433/amusement_park_db
+# Lee la URL de la BBDD de una variable de entorno, si no existe, usa localhost
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5433/amusement_park_db}
 
-# Las credenciales que definiste en el comando Docker
-spring.datasource.username=postgres
-spring.datasource.password=amusementParkDb
+# Lee el usuario de una variable de entorno, si no existe, usa postgres
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+
+# Lee la contraseña de una variable de entorno, si no existe, usa amusementParkDb
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:amusementParkDb}
 
 # =======================================
 # CONFIGURACION DE JPA (HIBERNATE)
 # =======================================
-# Le decimos a Hibernate que estamos usando el "dialecto" de PostgreSQL
+# ... (El resto de tu archivo puede quedar igual) ...
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-# Esta es la linea mas importante.
-# 'validate' le dice a Spring que, al arrancar, compruebe si las tablas de la BBDD
-# coinciden con tus clases @Entity de Java. Si no coinciden, la app fallara.
-# Esto es perfecto para desarrollo, te avisa si te olvidas de algo.
 spring.jpa.hibernate.ddl-auto=validate
-
-# (Opcional pero recomendado) Muestra por consola las queries SQL que JPA ejecuta
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
